Updated UgAnimation example with new format.

--- a/UgAnimationDemo/src/GraphPage.page
+++ b/UgAnimationDemo/src/GraphPage.page
@@ -1,205 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:com.scade.sdk.view.widgets="http://scade.com/sdk/view/widgets/style" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color" xmlns:svg_3="http://scade.com/svg/draw/attributes/path">
+<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:svg="http://scade.com/svg/draw">
   <com.scade.sdk.view:Page name="GraphPage" drawing="/3">
-    <styles xsi:type="com.scade.sdk.view.widgets:PageStyle">
-      <screen device="iPhone 5/SE (4-inch)" svg="svg/screen/iphone_5.svg">
-        <size width="320" height="568"/>
-        <location x="16"/>
-        <landscapeLocation x="-70" y="87"/>
-      </screen>
-    </styles>
-    <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
+    <size width="414" height="896"/>
     <layout xsi:type="com.scade.sdk.layout:GridLayout"/>
     <minArea width="320" height="568"/>
     <maxArea width="320" height="568"/>
-    <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget1" drawing="/3/@drawableChilds.1/@drawableChilds.0">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" verticalAlignment="MIDDLE"/>
+    <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget1">
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" verticalAlignment="MIDDLE">
+        <minSize width="100" height="100"/>
+      </layoutData>
       <size width="100" height="100"/>
       <location/>
-      <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
-        <minSize width="100" height="100"/>
-        <maxSize width="-1" height="-1"/>
-      </styles>
     </children>
     <adapterClass href="http://scade.com/UgAnimationDemo#//GraphPagePageAdapter"/>
   </com.scade.sdk.view:Page>
   <com.scade.sdk.data.binding:BindingModel/>
   <com.scade.sdk.lattice.navigation:Navigation page="/0"/>
-  <svg:Box attributes="{&quot;class&quot;:&quot;bgGradSVG&quot;}">
-    <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
-      <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
-        <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/width"/>
-        <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-          <path>w</path>
-        </expression>
-      </constraints>
-      <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h">
-        <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/height"/>
-        <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
-          <path>h</path>
-        </expression>
-      </constraints>
-      <drawableChilds xsi:type="svg:Rect">
-        <fill xsi:type="svg_2:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
-        <width value="100.0" measurement="PERCENTAGE"/>
-        <height value="100.0" measurement="PERCENTAGE"/>
-        <rx/>
-        <ry/>
-      </drawableChilds>
-      <width value="320.0"/>
-      <height value="568.0"/>
-    </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
-      <descriptiveChilds xsi:type="svg_2:LinearGradient" id="boxGrad" attributes="{&quot;gradientTransform&quot;:&quot;matrix(-5.857245e-007 -1 1 -5.872379e-007 14.2192 65.7809)&quot;}" userSpace="true">
-        <stops offset="0.3858">
-          <color xsi:type="svg_2:RGBColor" r="0.89411765" g="0.21960784" b="0.42745098"/>
-        </stops>
-        <stops offset="0.7513">
-          <color xsi:type="svg_2:RGBColor" r="0.8117647" g="0.12941177" b="0.3372549"/>
-        </stops>
-        <x1 value="65.7809"/>
-        <y1 value="25.7808"/>
-        <x2 value="14.2194"/>
-        <y2 value="25.7808"/>
-      </descriptiveChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="">
-        <descriptiveChilds xsi:type="svg_2:LinearGradient" id="bgGrad">
-          <stops>
-            <color xsi:type="svg_2:RGBColor" r="0.13333334" g="0.6431373" b="0.7921569"/>
-          </stops>
-          <stops offset="0.61">
-            <color xsi:type="svg_2:RGBColor" r="0.06666667" g="0.37254903" b="0.6039216"/>
-          </stops>
-          <x1 value="0.5"/>
-          <y1 measurement="PERCENTAGE"/>
-          <x2 value="0.5"/>
-          <y2 value="1.0"/>
-        </descriptiveChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Rect">
-        <fill xsi:type="svg_2:LinearGradient" id="bgGrad">
-          <stops>
-            <color xsi:type="svg_2:RGBColor" r="0.13333334" g="0.6431373" b="0.7921569"/>
-          </stops>
-          <stops offset="0.61">
-            <color xsi:type="svg_2:RGBColor" r="0.06666667" g="0.37254903" b="0.6039216"/>
-          </stops>
-          <x1 value="0.5"/>
-          <y1 measurement="PERCENTAGE"/>
-          <x2 value="0.5"/>
-          <y2 value="1.0"/>
-        </fill>
-        <width value="100.0" measurement="PERCENTAGE"/>
-        <height value="100.0" measurement="PERCENTAGE"/>
-        <rx/>
-        <ry/>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" id="graphTextGroup" opacity="0.5">
-        <drawableChilds xsi:type="svg:Text" id="svg_2" attributes="{&quot;font-weight&quot;:&quot;700&quot;}" fontSize="18" fontName="Roboto" text="0">
-          <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-          <x value="48.33"/>
-          <y value="473.71"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Text" id="svg_3" fontSize="18" fontName="Roboto" text="200">
-          <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-          <x value="48.33"/>
-          <y value="301.71"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Text" id="svg_4" fontSize="18" fontName="Roboto" text="400">
-          <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-          <x value="48.33"/>
-          <y value="101.71"/>
-        </drawableChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" id="horizontalLinesGroup" attributes="{&quot;stroke-miterlimit&quot;:&quot;10&quot;}">
-        <fill xsi:type="svg_2:NoneColor"/>
-        <stroke xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-        <drawableChilds xsi:type="svg:Line" opacity="0.1" id="svg_5">
-          <x1 value="780.0"/>
-          <y1 value="481.7"/>
-          <x2 value="30.0"/>
-          <y2 value="481.7"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Line" opacity="0.1" id="svg_6">
-          <x1 value="780.0"/>
-          <y1 value="381.7"/>
-          <x2 value="30.0"/>
-          <y2 value="381.7"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Line" opacity="0.1" id="svg_7">
-          <x1 value="780.0"/>
-          <y1 value="281.7"/>
-          <x2 value="30.0"/>
-          <y2 value="281.7"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Line" opacity="0.1" id="svg_8">
-          <x1 value="780.0"/>
-          <y1 value="181.7"/>
-          <x2 value="30.0"/>
-          <y2 value="181.7"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Line" opacity="0.1" id="svg_9">
-          <x1 value="780.0"/>
-          <y1 value="81.7"/>
-          <x2 value="30.0"/>
-          <y2 value="81.7"/>
-        </drawableChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" id="uiGroup">
-        <drawableChilds xsi:type="svg:Path" strokeWidth="4.0" id="graphLine" attributes="{&quot;stroke-linecap&quot;:&quot;round&quot;,&quot;stroke-miterlimit&quot;:&quot;10&quot;}">
-          <fill xsi:type="svg_2:NoneColor"/>
-          <stroke xsi:type="svg_2:RGBColor" r="0.96862745" g="0.59607846" b="0.09803922"/>
-          <elements xsi:type="svg_3:PathMove" x="49.21858" y="481.09998"/>
-          <elements xsi:type="svg_3:PathCubic" x1="32.72566" y1="-112.58824" x2="56.81466" y2="-132.38007" x="74.08798" y="-123.01747"/>
-          <elements xsi:type="svg_3:PathCubic" x1="23.20452" y1="12.56248" x2="38.917" y2="80.47097" x="74.60826" y="75.61189"/>
-          <elements xsi:type="svg_3:PathCubic" x1="18.20983" y1="-2.48879" x2="17.01318" y2="-20.62143" x="38.44875" y="-25.71753"/>
-          <elements xsi:type="svg_3:PathCubic" x1="40.42582" y1="-9.71814" x2="55.09773" y2="52.14613" x="70.91427" y="16.1179"/>
-          <elements xsi:type="svg_3:PathCubic" x1="15.92059" y1="-36.14675" x2="5.61903" y2="-108.67728" x="23.36061" y="-151.10529"/>
-          <elements xsi:type="svg_3:PathCubic" x1="15.14017" y1="-36.26527" x2="29.49992" x="48.95842" y="-40.17623"/>
-          <elements xsi:type="svg_3:PathCubic" x1="10.71778" y1="-22.04359" x2="16.96115" y2="-54.75344" x="20.60312" y="-78.81177"/>
-        </drawableChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" id="connectorGroup">
-        <drawableChilds xsi:type="svg:Line" id="connector">
-          <stroke xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-          <x1 value="92.0"/>
-          <y1 value="1.0"/>
-          <x2 value="92.0"/>
-          <y2 value="1.0"/>
-        </drawableChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Group" attributes="{&quot;class&quot;:&quot;box&quot;}">
-        <drawableChilds xsi:type="svg:Rect">
-          <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-          <width value="80.0"/>
-          <height value="40.0"/>
-          <rx value="20.0"/>
-          <ry value="20.0"/>
-        </drawableChilds>
-        <drawableChilds xsi:type="svg:Text" id="boxLabel" text="">
-          <x value="40.0"/>
-          <y value="28.0"/>
-        </drawableChilds>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Circle" id="nullDot">
-        <fill xsi:type="svg_2:RGBColor" r="1.0"/>
-        <cx/>
-        <cy/>
-        <r value="1.0"/>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Circle" id="graphDot">
-        <fill xsi:type="svg_2:RGBColor" r="1.0" g="1.0" b="1.0"/>
-        <cx/>
-        <cy/>
-        <r value="10.0"/>
-      </drawableChilds>
-      <drawableChilds xsi:type="svg:Circle" strokeWidth="10.0" id="dragger">
-        <fill xsi:type="svg_2:RGBColor"/>
-        <stroke xsi:type="svg_2:RGBColor"/>
-        <cx/>
-        <cy/>
-        <r value="15.0"/>
-      </drawableChilds>
-    </drawableChilds>
-  </svg:Box>
+  <svg:Box attributes="{&quot;class&quot;:&quot;bgGradSVG&quot;}"/>
 </xmi:XMI>
