--- a/UgAnimationDemo/src/Basic.page
+++ b/UgAnimationDemo/src/Basic.page
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:com.scade.sdk.view.widgets="http://scade.com/sdk/view/widgets/style" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
+<xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
   <com.scade.sdk.view:Page name="Basic" drawing="/3">
-    <styles xsi:type="com.scade.sdk.view.widgets:PageStyle">
-      <screen device="iPhone 5/SE (4-inch)" svg="svg/screen/iphone_5.svg">
-        <size width="320" height="568"/>
-        <location x="16"/>
-        <landscapeLocation x="-70" y="87"/>
-      </screen>
-    </styles>
-    <styles xsi:type="com.scade.sdk.view.widgets:BackgroundStyle"/>
+    <size width="414" height="896"/>
     <layout xsi:type="com.scade.sdk.layout:GridLayout"/>
     <minArea width="320" height="568"/>
     <maxArea width="320" height="568"/>
-    <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget1" drawing="/3/@drawableChilds.1/@drawableChilds.0">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true"/>
-      <size width="120" height="70"/>
-      <location x="100" y="249"/>
-      <styles xsi:type="com.scade.sdk.view.widgets:WidgetStyle">
-        <minSize width="120" height="70"/>
-        <maxSize width="-1" height="-1"/>
-      </styles>
+    <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget1" drawing="/3/@children.1/@children.0">
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true">
+        <minSize width="100" height="100"/>
+      </layoutData>
+      <size width="100" height="100"/>
+      <location x="157" y="398"/>
     </children>
     <adapterClass href="http://scade.com/UgAnimationDemo#//BasicPageAdapter"/>
   </com.scade.sdk.view:Page>
   <com.scade.sdk.data.binding:BindingModel/>
   <com.scade.sdk.lattice.navigation:Navigation page="/0"/>
   <svg:Box>
-    <drawableChilds xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
+    <children xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
       <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
         <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/width"/>
         <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
@@ -39,20 +30,19 @@
           <path>h</path>
         </expression>
       </constraints>
-      <drawableChilds xsi:type="svg:Rect">
+      <children xsi:type="svg:Rect">
         <fill xsi:type="svg_2:RGBColor" r="0.972549" g="0.972549" b="0.972549"/>
         <width value="100.0" measurement="PERCENTAGE"/>
         <height value="100.0" measurement="PERCENTAGE"/>
         <rx/>
         <ry/>
-      </drawableChilds>
-      <width value="320.0"/>
-      <height value="568.0"/>
-    </drawableChilds>
-    <drawableChilds xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
-      <drawableChilds xsi:type="svg:Group" attributes="">
-        <matrix translateX="100.0" translateY="249.0"/>
-        <drawableChilds xsi:type="svg:Rect" strokeWidth="5.0" fillOpacity="0.4" id="rect1">
+      </children>
+      <width value="414.0"/>
+      <height value="896.0"/>
+    </children>
+    <children xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
+      <children xsi:type="svg:Group" attributes="">
+        <children xsi:type="svg:Rect" id="rect1" fillOpacity="0.4" strokeWidth="5.0">
           <fill xsi:type="svg_2:RGBColor" r="1.0" g="0.4" b="1.0"/>
           <stroke xsi:type="svg_2:RGBColor" b="0.5019608"/>
           <x value="10.0"/>
@@ -61,8 +51,9 @@
           <height value="50.0"/>
           <rx/>
           <ry/>
-        </drawableChilds>
-      </drawableChilds>
-    </drawableChilds>
+        </children>
+        <matrix translateX="157.0" translateY="398.0"/>
+      </children>
+    </children>
   </svg:Box>
 </xmi:XMI>
