Made example easier to understand, 2. added Up and Down event sample

--- a/UgGestureDemo/src/main.page
+++ b/UgGestureDemo/src/main.page
@@ -2,29 +2,41 @@
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:com.scade.sdk.data.binding="http://scade.com/sdk/data/binding" xmlns:com.scade.sdk.expr="com.scade.sdk.expr" xmlns:com.scade.sdk.lattice.navigation="http://scade.com/lattice/navigation" xmlns:com.scade.sdk.layout="http://scade.com/sdk/layout" xmlns:com.scade.sdk.view="http://scade.com/sdk/view/widgets" xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:svg="http://scade.com/svg/draw" xmlns:svg_1="http://scade.com/svg/constraints" xmlns:svg_2="http://scade.com/svg/style/color">
   <com.scade.sdk.view:Page name="main" drawing="/3">
     <size width="414" height="896"/>
-    <layout xsi:type="com.scade.sdk.layout:GridLayout" rows="3" marginTop="20" marginBottom="20" marginLeft="50" marginRight="50"/>
+    <layout xsi:type="com.scade.sdk.layout:GridLayout" rows="4" marginTop="20" marginBottom="20" marginLeft="50" marginRight="50"/>
     <minArea width="375" height="667"/>
     <maxArea width="375" height="667"/>
-    <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@children.1/@children.0" text="My gesture" wrapText="true">
+    <children xsi:type="com.scade.sdk.view:Label" name="label1" drawing="/3/@children.1/@children.0" text="My gesture" wrapText="true" horizontalAlignment="CENTER">
       <layoutData xsi:type="com.scade.sdk.layout:GridData" row="1" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" grabVerticalSpace="true" widthConstraint="MATCH_PARENT" heightConstraint="MATCH_PARENT">
         <minSize/>
       </layoutData>
-      <size width="314" height="796"/>
+      <size width="314" height="738"/>
       <location x="50" y="50"/>
     </children>
     <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget1" drawing="/3/@children.1/@children.1">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
         <minSize width="30" height="30"/>
       </layoutData>
       <size width="314" height="30"/>
       <location x="50" y="20"/>
     </children>
     <children xsi:type="com.scade.sdk.view:CustomWidget" name="customwidget2" drawing="/3/@children.1/@children.2">
-      <layoutData xsi:type="com.scade.sdk.layout:GridData" row="2" horizontalAlignment="CENTER" verticalAlignment="MIDDLE">
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" row="3" horizontalAlignment="CENTER" verticalAlignment="MIDDLE">
         <minSize width="30" height="30"/>
       </layoutData>
       <size width="30" height="30"/>
       <location x="192" y="846"/>
+    </children>
+    <children xsi:type="com.scade.sdk.view:Button" name="button1" drawing="/3/@children.1/@children.3" text="MyButton" horizontalAlignment="CENTER">
+      <backgroundColor Red="18" Green="86" Blue="6"/>
+      <layoutData xsi:type="com.scade.sdk.layout:GridData" row="2" horizontalAlignment="CENTER" verticalAlignment="MIDDLE" grabHorizontalSpace="true" widthConstraint="MATCH_PARENT">
+        <minSize width="-101" height="58"/>
+        <maxSize width="-1" height="-1"/>
+      </layoutData>
+      <size width="314" height="58"/>
+      <location x="50" y="788"/>
+      <font fontFamily="ArialMT" size="17">
+        <color Red="254" Green="255" Blue="255"/>
+      </font>
     </children>
     <adapterClass href="http://scade.com/NGGestureDemo#//MainPageAdapter"/>
   </com.scade.sdk.view:Page>
@@ -60,17 +72,17 @@
       <width value="414.0"/>
       <height value="896.0"/>
     </children>
-    <children xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}">
-      <children xsi:type="svg:Group" attributes="{&quot;scade:bind&quot;:&quot;text:label&quot;}">
-        <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fontSize="27" fontName="ArialMT" text="My gesture" alignmentBaseline="central">
+    <children xsi:type="svg:Group" attributes="{&quot;template-id&quot;:&quot;content&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0">
+      <children xsi:type="svg:Group" attributes="{&quot;scade:bind&quot;:&quot;text:label&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0">
+        <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0" fontSize="27" fontName="ArialMT" text="My gesture" anchor="middle" alignmentBaseline="central">
           <fill xsi:type="svg_2:RGBColor" b="0.5019608"/>
-          <x/>
-          <y value="398.0"/>
+          <x value="157.0"/>
+          <y value="369.0"/>
         </children>
         <matrix translateX="50.0" translateY="50.0"/>
       </children>
-      <children xsi:type="svg:Group" attributes="">
-        <children xsi:type="svg:Rect" id="rect1" attributes="{&quot;fill-stroke&quot;:&quot;#804000&quot;}" fillOpacity="0.6" strokeWidth="3.0">
+      <children xsi:type="svg:Group" attributes="" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0">
+        <children xsi:type="svg:Rect" id="rect1" attributes="{&quot;fill-stroke&quot;:&quot;#804000&quot;}" fillOpacity="0.6" strokeWidth="3.0" strokeOpacity="1.0" opacity="1.0">
           <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
             <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Rect/width"/>
             <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
@@ -85,8 +97,8 @@
         </children>
         <matrix translateX="50.0" translateY="20.0"/>
       </children>
-      <children xsi:type="svg:Group" attributes="">
-        <children xsi:type="svg:Circle" id="circle1" fillOpacity="0.9" strokeWidth="3.0">
+      <children xsi:type="svg:Group" attributes="" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0">
+        <children xsi:type="svg:Circle" id="circle1" fillOpacity="0.9" strokeWidth="3.0" strokeOpacity="1.0" opacity="1.0">
           <fill xsi:type="svg_2:RGBColor" r="0.95686275" g="0.9843137" b="0.57254905"/>
           <stroke xsi:type="svg_2:RGBColor" g="0.5019608" b="0.2509804"/>
           <cx/>
@@ -94,6 +106,35 @@
           <r value="20.0"/>
         </children>
         <matrix translateX="192.0" translateY="846.0"/>
+      </children>
+      <children xsi:type="svg:Group" attributes="" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0">
+        <children xsi:type="svg:Box" attributes="{&quot;template-id&quot;:&quot;background&quot;}">
+          <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.w">
+            <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/width"/>
+            <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
+              <path>w</path>
+            </expression>
+          </constraints>
+          <constraints xsi:type="svg_1:DirectConstraint" exprStr="size.h">
+            <feature xsi:type="ecore:EReference" href="http://scade.com/svg#//draw/Box/height"/>
+            <expression xsi:type="com.scade.sdk.expr:Variable" name="size">
+              <path>h</path>
+            </expression>
+          </constraints>
+          <children xsi:type="svg:Rect">
+            <fill xsi:type="svg_2:RGBColor" r="0.07058824" g="0.3372549" b="0.023529412"/>
+            <width value="100.0" measurement="PERCENTAGE"/>
+            <height value="100.0" measurement="PERCENTAGE"/>
+          </children>
+          <width value="314.0"/>
+          <height value="58.0"/>
+        </children>
+        <children xsi:type="svg:Text" attributes="{&quot;template-id&quot;:&quot;node-text&quot;}" fillOpacity="1.0" strokeOpacity="1.0" opacity="1.0" fontSize="17" fontName="ArialMT" text="MyButton" anchor="middle" alignmentBaseline="central">
+          <fill xsi:type="svg_2:RGBColor" r="0.99607843" g="1.0" b="1.0"/>
+          <x value="157.0"/>
+          <y value="29.0"/>
+        </children>
+        <matrix translateX="50.0" translateY="788.0"/>
       </children>
     </children>
   </svg:Box>
